[package]
name = "grate"
version = "0.1.0"
edition = "2021"
authors = ["Shayne O'Sullivan <shayneo@pm.me>"]
license ="MIT
readme = "README.md"
homepage = "https://github.com/shayneo/grate"
repository = "https://github.com/shayneo/grate"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }